fix: Fix overflow issues

--- a/Calculator/styles.css
+++ b/Calculator/styles.css
@@ -12,11 +12,9 @@ main {
   border-radius: 15px;
   border: 1px solid white;
   display: grid;
-  grid-template: repeat(6, 1fr) / repeat(4, 1fr);
+  grid-template: auto repeat(5, 70px) / repeat(4, 70px);
   padding: 15px;
   gap: 15px;
-  height: 500px;
-  width: 300px;
 }
 
 #outBox {
@@ -30,7 +28,7 @@ main {
   padding: 10px 20px;
   margin: 8px;
   overflow-wrap: break-word;
-  height: 70px;
+  min-height: 70px;
 }
 
 #miniOut {
@@ -42,7 +40,6 @@ main {
 main>button {
   color: white;
   background-color: black;
-  aspect-ratio: 1/1;
   border-radius: 50%;
   border: none;
   font-size: 18px;
